--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.4.0",
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^3.0.1",
+    "moment": "^2.30.0",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
